# amplifier-bitcoin-devtools

./: .env.example  .gitignore  AUDIT.md  CHANGELOG.md  CONTRIBUTING.md  README.md  bundle.md  pyproject.toml
.github/workflows/: ci.yaml
agents/: lightning-specialist.md  market-maker.md  utxo-manager.md  wallet-manager.md
behaviors/: aggeus.yaml  bitcoin.yaml  lightning.yaml  utxo-bundle.yaml
context/: agent-awareness.md  aggeus-protocol.md  instructions.md
docs/plans/: 2026-02-25-split-utxos-design.md  2026-02-25-split-utxos-plan.md  2026-02-26-professionalization-design.md  2026-02-26-professionalization-implementation.md
modules/tool-aggeus-markets/: pyproject.toml
modules/tool-aggeus-markets/amplifier_module_tool_aggeus_markets/: __init__.py  client.py  tools.py
modules/tool-aggeus-markets/tests/: conftest.py  test_client.py  test_contracts.py  test_crypto.py  test_refactor_client.py  test_refactor_init.py  test_refactor_tools.py  test_tools.py
modules/tool-bitcoin-rpc/: pyproject.toml
modules/tool-bitcoin-rpc/amplifier_module_tool_bitcoin_rpc/: __init__.py  client.py  tools.py
modules/tool-bitcoin-rpc/tests/: _helpers.py  conftest.py  test_client.py  test_consolidate_race_condition.py  test_contracts.py  test_load_credentials_resource_leak.py  test_quality_fixes.py  test_refactor_client.py  test_refactor_init.py  test_refactor_tools.py  test_split_utxos_raise_for_status.py  test_tools.py
modules/tool-lnd/: pyproject.toml
modules/tool-lnd-bob/: pyproject.toml
modules/tool-lnd-bob/amplifier_module_tool_lnd_bob/: __init__.py
modules/tool-lnd/amplifier_module_tool_lnd/: __init__.py  client.py  tools.py
modules/tool-lnd/tests/: conftest.py  test_client.py  test_contracts.py  test_refactor_client.py  test_refactor_init.py  test_refactor_tools.py  test_tools.py
tests/: conftest.py  test_ci_cd.py  test_dependency_hygiene.py  test_documentation.py  test_split_utxos.py
