[project]
name = "amplifier-module-tool-bitcoin-rpc"
version = "0.1.0"
description = "Bitcoin Core RPC tool for Amplifier — UTXO management"
requires-python = ">=3.11"
license = { text = "MIT" }
dependencies = [
    "httpx>=0.27",
]

[project.entry-points."amplifier.modules"]
tool-bitcoin-rpc = "amplifier_module_tool_bitcoin_rpc:mount"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["amplifier_module_tool_bitcoin_rpc"]
