[project]
name = "amplifier-module-tool-bitcoin-rpc"
version = "0.1.0"
description = "Bitcoin Core RPC tool for Amplifier — UTXO management"
requires-python = ">=3.11"
license = { text = "MIT" }
dependencies = [
    "httpx>=0.27",
]

[project.optional-dependencies]
test = ["pytest>=8.0", "pytest-asyncio>=0.24", "respx>=0.22"]

[project.entry-points."amplifier.modules"]
tool-bitcoin-rpc = "amplifier_module_tool_bitcoin_rpc:mount"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.pytest.ini_options]
pythonpath = ["tests"]

[tool.hatch.build.targets.wheel]
packages = ["amplifier_module_tool_bitcoin_rpc"]
