[project]
name = "amplifier-module-tool-lnd-bob"
version = "0.1.0"
description = "LND (bob) tool for Amplifier — Lightning invoice management via Polar Docker"
requires-python = ">=3.11"
license = { text = "MIT" }
dependencies = []

[project.entry-points."amplifier.modules"]
tool-lnd-bob = "amplifier_module_tool_lnd_bob:mount"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["amplifier_module_tool_lnd_bob"]
