[project]
name = "amplifier-module-tool-lnd"
version = "0.1.0"
description = "LND tool for Amplifier — Lightning invoice management via REST API"
requires-python = ">=3.11"
license = { text = "MIT" }
dependencies = ["httpx"]

[project.entry-points."amplifier.modules"]
tool-lnd = "amplifier_module_tool_lnd:mount"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["amplifier_module_tool_lnd"]

[dependency-groups]
dev = [
    "pytest>=9.0.2",
    "pytest-asyncio>=1.3.0",
    "respx>=0.22.0",
]
