[project]
name = "amplifier-module-tool-lnd"
version = "0.1.0"
description = "LND tool for Amplifier — Lightning invoice management via REST API"
requires-python = ">=3.11"
license = { text = "MIT" }
dependencies = ["httpx>=0.27"]

[project.optional-dependencies]
test = ["pytest>=8.0", "pytest-asyncio>=0.24", "respx>=0.22"]

[project.entry-points."amplifier.modules"]
tool-lnd = "amplifier_module_tool_lnd:mount"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["amplifier_module_tool_lnd"]
